--- a/LibApp.EfDataAccess/LibApp.EfDataAccess.csproj
+++ b/LibApp.EfDataAccess/LibApp.EfDataAccess.csproj
@@ -19,7 +19,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Domain\Domain.csproj" />
+    <ProjectReference Include="..\LibApp.Domain\LibApp.Domain.csproj" />
   </ItemGroup>
 
 </Project>
