--- a/LibApp.WebApp/LibApp.WebApp.csproj
+++ b/LibApp.WebApp/LibApp.WebApp.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
@@ -18,6 +18,7 @@
   <ItemGroup>
     <ProjectReference Include="..\LibApp.Domain\LibApp.Domain.csproj" />
     <ProjectReference Include="..\LibApp.EfDataAccess\LibApp.EfDataAccess.csproj" />
+    <ProjectReference Include="..\LibApp.Services\LibApp.Services.csproj" />
   </ItemGroup>
 
 </Project>
