LibApp.Services - UpdateBookAsync Seemingly Working Implementation

--- a/LibApp.Services/LibApp.Services.csproj
+++ b/LibApp.Services/LibApp.Services.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="NuGet.Packaging" Version="6.6.1" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\LibApp.EfDataAccess\LibApp.EfDataAccess.csproj" />
   </ItemGroup>
 
