--- a/LibApp.WebApp/LibApp.WebApp.csproj
+++ b/LibApp.WebApp/LibApp.WebApp.csproj
@@ -24,6 +24,8 @@
     <PackageReference Include="Microsoft.Extensions.Identity.Core" Version="8.0.0" />
     <PackageReference Include="Microsoft.Extensions.Identity.Stores" Version="8.0.0" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="8.0.0" />
+    <PackageReference Include="X.PagedList" Version="8.4.7" />
+    <PackageReference Include="X.PagedList.Mvc.Core" Version="8.4.7" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\LibApp.Domain\LibApp.Domain.csproj" />
