LibApp.Services.Abstractions Addition for Dependency Inversion Principle

--- a/LibApp.Services/LibApp.Services.csproj
+++ b/LibApp.Services/LibApp.Services.csproj
@@ -9,5 +9,6 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\LibApp.EfDataAccess\LibApp.EfDataAccess.csproj" />
+    <ProjectReference Include="..\LibApp.Services.Abstractions\LibApp.Services.Abstractions.csproj" />
   </ItemGroup>
 </Project>
