LibApp.Services.Abstractions.Interfaces Addition for Inversion of Control Principle

--- a/LibApp.EfDataAccess/LibApp.EfDataAccess.csproj
+++ b/LibApp.EfDataAccess/LibApp.EfDataAccess.csproj
@@ -5,6 +5,7 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
   <ItemGroup>
+    <ProjectReference Include="..\LibApp.Data.Abstractions\LibApp.Data.Abstractions.csproj" />
     <ProjectReference Include="..\LibApp.Domain\LibApp.Domain.csproj" />
   </ItemGroup>
   <ItemGroup>
