LibApp.WebApp Controller Refactoring that Ensued

--- a/LibApp.WebApp/LibApp.WebApp.csproj
+++ b/LibApp.WebApp/LibApp.WebApp.csproj
@@ -32,4 +32,9 @@
     <ProjectReference Include="..\LibApp.EfDataAccess\LibApp.EfDataAccess.csproj" />
     <ProjectReference Include="..\LibApp.Services\LibApp.Services.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <None Update="Properties\launchSettings.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
 </Project>
